--- a/style.css
+++ b/style.css
@@ -4,3 +4,107 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.float-left {
+    float: left;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sfondo-f4f9fd {
+    background-color: #f4f9fd;
+}
+
+.btn {
+    padding: 5px;
+    margin: 0 5px;
+    border-radius: 5px;
+    border: 1px solid #fe775a;
+}
+
+.btn-white {
+    background-color: #fafcfe;
+    color: #fe775a;
+}
+
+.btn-orange {
+    background-color: #fe775a;
+    color: white;
+}
+
+.header-superiore {
+    height: 60px;
+    line-height: 60px;
+}
+
+.header-superiore-left {
+    width: 50%;
+    height: 100%;
+    text-align: left;
+}
+
+.header-superiore-right {
+    width: 50%;
+    height: 100%;
+    text-align: right;
+}
+
+.list-inline {
+    list-style: none;
+}
+
+.list-inline > li {
+    display: inline-block;
+    padding: 0 10px;
+}
+
+.list-inline a {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+}
+
+.barra-menu {
+    height: 60px;
+    line-height: 60px;
+}
+
+.barra-menu-left {
+    width: 50%;
+    height: 100%;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.barra-menu-right {
+    width: 50%;
+    height: 100%;
+    text-align: right;
+    padding-right: 10px;
+}
+
+.barra-menu-left > img {
+    height: 50%;
+    vertical-align: middle;
+}
+
+.fa-chevron-down {
+    margin-left: 5px;
+}
+
+.sfondo-jumbotron {
+    background-image: url('img/jumbotron.png');
+    height: 615px;
+}
