--- a/style.css
+++ b/style.css
@@ -163,13 +163,30 @@ h1 {
 
 .sfondo-grigio {
     background-color: #f4f9fd;
-    height: 1000px;
+    /* height: 1000px; */
 }
 
 .sfondo-grigio > div {
-    height: 100px;
+    /* height: 140px; */
+    /* padding-top: 20px; */
 }
 
 .sfondo-grigio img {
-    height: 100%;
+    height: 170px;
+    display:block;
+    margin:0px auto;
+    padding-top: 20px;
+    text-align:center;
+}
+
+.sfondo-grigio > div > div {
+    text-align: center;
+    font-size: 25px;
+}
+
+.sfondo-grigio > div > p {
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px 0;
 }
