--- a/style.css
+++ b/style.css
@@ -53,6 +53,14 @@ body {
     width: 50%;
 }
 
+.text-22px {
+    font-size: 22px;
+}
+
+.text-18px {
+    font-size: 18px;
+}
+
 .header-superiore {
     height: 60px;
     line-height: 60px;
@@ -171,7 +179,7 @@ h1 {
     /* padding-top: 20px; */
 }
 
-.sfondo-grigio img {
+.sfondo-grigio > div > img {
     height: 170px;
     display:block;
     margin:0px auto;
@@ -189,4 +197,133 @@ h1 {
     width: 50%;
     margin: 0 auto;
     padding: 20px 0;
+}
+
+.layout-2-colonne {
+    background-color: #ffffff;
+    /* height: 350px; */
+    margin: 20px;
+}
+
+.colonna-layout-2-colonne {
+    padding: 50px;
+}
+
+.colonna-layout-2-colonne > a {
+    text-decoration: none;
+}
+
+.colonna-sx {
+    width: calc(100% / 3);
+    height: 100%;
+    padding: 60px;
+}
+
+.colonna-layout-2-colonne > img {
+    height: 70%;
+    padding-bottom: 20px;
+}
+
+.colonna-sx > div {
+    /* margin: 0 50px 50px 50px; */
+}
+
+.colonna-dx {
+    width: calc((100% / 3) * 2);
+    height: 100%;
+    text-align: left;
+    padding-top: 70px;
+}
+
+.layout-2-colonne > .colonna-dx > div {
+    font-size: 22px;
+}
+
+.layout-2-colonne > .colonna-dx > p {
+    font-size: 16px;
+    padding: 30px 0 20px 0;
+}
+
+.colonna-dx > .layout-2-colonne {
+    height: 22px;
+    margin: 0;
+    vertical-align: middle;
+}
+
+.colonna-dx > .layout-2-colonne > .colonna-layout-2-colonne {
+    padding: 0;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.colonna-dx > .layout-2-colonne > .colonna-layout-2-colonne:last-child {
+    /* padding: 0 10px 0 20px;
+    width: 50%;
+    vertical-align: middle; */
+}
+
+.features {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.features li {
+    font-size: 16px;
+}
+
+.fa-check {
+    background-color: #fe775a;
+    color: white;
+    border-radius: 50%;
+    font-size: 14px;
+    padding: 2px;
+    margin-right: 15px;
+}
+
+.layout-3-colonne {
+    /* background-color: #ffffff; */
+    /* height: 200px; */
+    margin: 20px;
+}
+
+.colonna-layout-3-colonne {
+    height: 100%;
+    width: 30%;
+    margin: calc(10% / 4);
+    background-color: #ffffff;
+    padding: 20px 30px;
+}
+
+.colonna-layout-3-colonne:first-child {
+    margin-left: 0;
+}
+
+.colonna-layout-3-colonne:last-child {
+    margin-right: 0;
+}
+
+.colonna-layout-3-colonne > img {
+    height: 100px;
+}
+
+.colonna-layout-3-colonne > p {
+    margin: 30px 0 50px 0;
+    font-size: 16px;
+}
+
+.colonna-layout-3-colonne > hr {
+    margin-bottom: 30px;
+}
+
+.colonna-layout-3-colonne > .features {
+    text-align: left;
+}
+
+.colonna-layout-3-colonne > div:last-child {
+    padding: 20px 0;
+}
+
+.colonna-layout-3-colonne > div > a {
+    text-decoration: none;
+    /* margin: 20px 0; */
 }
