--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
     margin: 0 auto;
 }
 
+.container-small {
+    width: 65%;
+    margin: 0 auto;
+}
+
 .float-left {
     float: left;
 }
@@ -326,4 +331,100 @@ h1 {
 .colonna-layout-3-colonne > div > a {
     text-decoration: none;
     /* margin: 20px 0; */
+}
+
+.sfondo-verde {
+    background-color: #00b5ad;
+}
+
+.sfondo-verde > .container > div:first-child {
+    text-align: center;
+    font-size: 25px;
+    color: white;
+    padding: 30px 0;
+}
+
+.sfondo-verde > .container > p {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+}
+
+.tabella {
+    margin: 50px 0;
+    color: white;
+    border: 0px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
+.tabella > .riga:last-child {
+border-top: 1px solid white;
+width: 100%;
+height: 100%;
+}
+
+.tabella .colonna {
+    width: calc(100% / 4);
+    border-right: 1px solid white;
+    margin: 0;
+    padding: 10px;
+}
+
+.tabella .colonna:last-child {
+    border-right: 0;
+}
+
+.tabella img {
+    height: 30px;
+} 
+
+.text-grassetto {
+font-size: 30px;
+}
+
+.sezione-logo {
+    width: 100%;
+    padding: 30px 0;
+}
+
+.sezione-logo-left {
+    width: 30%;
+    text-align: left;
+}
+.sezione-logo-left div {
+    font-size: 30px;
+    padding-bottom: 20px;
+}
+
+.sezione-logo-left div:last-child {
+    font-size: 16px;
+    width: 60%;
+}
+
+.sezione-logo-right {
+    width: 70%;
+    text-align: center;
+}
+
+.tabella-loghi {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
+.tabella-loghi .colonna-loghi {
+    position: relative;
+    width: calc(100% /4);
+    height: 100px;
+    margin: 0;
+    padding: 10px;
+}
+
+.colonna-loghi img {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%);
 }
