--- a/style.css
+++ b/style.css
@@ -131,11 +131,9 @@ body {
 
 .sfondo-jumbotron {
     background-image: url('img/jumbotron.png');
-    /* height: 615px; */
 }
 
 .jumbotron {
-    /* position: relative; */
     height: 612px;
 }
 
@@ -220,10 +218,6 @@ h1 {
     padding-bottom: 20px;
 }
 
-.colonna-sx > div {
-    /* margin: 0 50px 50px 50px; */
-}
-
 .colonna-dx {
     width: calc((100% / 3) * 2);
     height: 100%;
@@ -244,19 +238,25 @@ h1 {
     height: 22px;
     margin: 0;
     vertical-align: middle;
+    position: relative;
 }
 
 .colonna-dx > .layout-2-colonne > .colonna-layout-2-colonne {
     padding: 0;
     font-size: 18px;
     line-height: 22px;
+    position: absolute;
 }
 
 .colonna-dx > .layout-2-colonne > .colonna-layout-2-colonne:last-child {
-    /* padding: 0 10px 0 20px;
-    width: 50%;
-    vertical-align: middle; */
+    height: 100%;
+    width: 60%;
+    top: 50%;
+    right: 50px;
+    color: black;
+    text-align: right;
 }
+
 
 .features {
     margin-top: 20px;
@@ -277,15 +277,15 @@ h1 {
 }
 
 .layout-3-colonne {
-    /* background-color: #ffffff; */
-    /* height: 200px; */
     margin: 20px;
+    margin-bottom: 0;
 }
 
 .colonna-layout-3-colonne {
     height: 100%;
     width: 30%;
     margin: calc(10% / 4);
+    margin-bottom: 50px;
     background-color: #ffffff;
     padding: 20px 30px;
 }
